--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@
 
   <div class="paper red">
     <p class="p1">
-      <center>&nbsp;and My Favorite <br> Person 😍&nbsp;</center>
+      <center style="padding: 10% ;">and <br>My Favorite Person 😍</center>
     </p>
     <p class="p2"></p>
   </div>
   <div class="paper red">
     <p class="p1">
-      <center>&nbsp;Hye princcess <br> ❤️❤️❤️❤️❤️ &nbsp;</center>
+      <center> Hye princcess </center>
+      <center> ❤️❤️❤️❤️❤️ </center>
     </p>
     <p class="p2"></p>
   </div>
@@ -99,8 +100,7 @@
 
   <div class="paper">
     <p class="p1">
-      <center><br><br>&nbsp;&nbsp;&nbsp; Drag the papers to
-        move!&nbsp; &nbsp; &nbsp;<br><br><br>
+      <center style="padding: 20% 20% ;"> Drag the papers to move!
       </center>
     </p>
   </div>
