Updated correct index.html
it is the correct html

--- a/index.html
+++ b/index.html
@@ -25,44 +25,44 @@
 
 
 
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="12.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(-5deg);">
     <img src="11.png" />
   </div>
 
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="10.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(-5deg);">
     <img src="9.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="8.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(-5deg);">
     <img src="7.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="6.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(-5deg);">
     <img src="5.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="4.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(-5deg);">
     <img src="3.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="2.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(-5deg);">
     <img src="1.png" />
   </div>
-  <div class="paper image">
+  <div class="paper image" style="transform: rotate(5deg);">
     <img src="baatein.jpg" />
   </div>
 
