--- a/index.html
+++ b/index.html
@@ -76,31 +76,24 @@
 
   <div class="paper red">
     <p class="p1">
-      <center style="padding: 10% ;">and <br>My Favorite Person 😍</center>
+      <center style="padding: 10% ;"> and <br> amazing 😍🤭 </center>
     </p>
     <p class="p2"></p>
   </div>
   <div class="paper red">
     <p class="p1">
-      <center> Hye princcess </center>
+      <center> How someone can be so cute </center>
       <center> ❤️❤️❤️❤️❤️ </center>
     </p>
     <p class="p2"></p>
   </div>
 
-  <!-- <div class="paper">
-    <p class="p1">
-      <center><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<center>Hey princess</center>
-        <br>
-        <center>❤️❤️❤️❤️❤️</center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br><br>
-      </center>
-    </p> -->
+  
 
-  </div>
 
   <div class="paper">
     <p class="p1">
-      <center style="padding: 20% 20% ;"> Drag the papers to move!
+      <center style="padding: 20% 20% ;">&nbsp; &nbsp; Drag the papers to move! &nbsp; &nbsp;
       </center>
     </p>
   </div>
